@@ -1,38 +1,20 @@
-* BH model - problem with N_g
-
-* BSW model - investigate first, then send email
- - problem with complex logarithm
- - factor in front of the regeon term
- - energy dependence S0 does actually depend on t.
- - signatures of reggeons?
- - make sure that the integration accuracy is sufficient!
-
-* model problems (BH, BSW) to Wiki
-
-* finish Wiki
-
-* add `environment' hints to README
-
-* README
- - the names and a brief description of all the files that make up the package
- - clear instructions on the installation and execution of the program
-
-* update make_release
-
-* update TOTEM TWiki, cfg files (new label scheme, how to get available model list)
-
-* check compatibility with old curves
-
-* plots: grid in Asymptote
-
 * problem with low |t| sampling: visible in B(t)
 
-* web - distributions - naming scheme
+* make new release
+
+* email model authors: BSW, Islam, Jenkovszky, PPP, (Dremin ?)
+
+* paper
+ - upload to arXiv
+ - link to home page
 
 
 -------------------- long term --------------------
 
-* add more models (e.g. Brazilian group)?
+* add more models
+ - group of Ferreira contacted, waiting for response
+
+* s-distributions: add si_el(s), si_inel(s) and their ratios
 
 * Jenkovszky model: other trajectory parameterisations than Eq. (8)?
 
