@@ -35,6 +35,10 @@ void BSWModel::Configure(BSWModel::ModeType _mode, bool _presampled)
 		{ fullLabel.mode = "Pomeron"; shortLabel.mode = "pom"; }
 	if (mode == mReg)
 		{ fullLabel.mode = "Reggeon"; shortLabel.mode = "reg"; }
+
+	// ambiguity constants
+	k_u = 0; k_lnu = 0;	// only this combination reproduces high-energy behaviour of sigma_tot(s) and rho(s)
+	regge_fac(0., 1.);	// only way to reproduce results at low energies
 }
 
 //----------------------------------------------------------------------------------------------------
@@ -55,7 +59,15 @@ void BSWModel::Init()
 	A2.Init(	-24.269,	0.,		0.357,	1.,		+1);
 	omega.Init( -167.329,	0.,		0.323,	0.795,	-1);
 	rho.Init(	124.919,	8.54,	0.320,	1.,		-1);
-	
+
+	// signs according to interaction mode
+	if (cnts->pMode == cnts->mPP)
+	{
+		A2.sign = +1.; omega.sign = rho.sign = +1.;
+	} else {
+		A2.sign = +1.; omega.sign = rho.sign = -1.;
+	}
+
 	if (highAccuracy)
 	{
 		upper_bound_t = -500.; precision_t = 1E-15;
@@ -64,8 +76,6 @@ void BSWModel::Init()
 		upper_bound_t = -200.; precision_t = 1E-5;
 		upper_bound_b = 30.; precision_b = 1E-5;
 	}
-
-	regge_fac(1., 0.);
 	
 	// save value of S0(0)
 	S00 = S0(0.);
@@ -81,9 +91,14 @@ void BSWModel::Print() const
 	printf("\t%s\n", CompileFullLabel().c_str());
 	printf("\tmode = %u\n", mode);
 	printf("\tc=%.3f, c'=%.3f, m1=%.3f, m2=%.3f, f=%.3f, a=%.3f\n", c, cp, m1, m2, f, a);
-	printf("\tA2   : C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f\n", A2.C, A2.b, A2.a, A2.ap);
-	printf("\tomega: C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f\n", omega.C, omega.b, omega.a, omega.ap);
-	printf("\trho  : C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f\n", rho.C, rho.b, rho.a, rho.ap);
+	printf("\tA2   : C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f, signature=%+.0f, sign=%+0.f\n",
+		A2.C, A2.b, A2.a, A2.ap, A2.signature, A2.sign);
+	printf("\tomega: C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f, signature=%+.0f, sign=%+0.f\n",
+		omega.C, omega.b, omega.a, omega.ap, omega.signature, omega.sign);
+	printf("\trho  : C=%.3f, b=%.3f, alpha=%.3f, aplha'=%.3f, signature=%+.0f, sign=%+0.f\n",
+		rho.C, rho.b, rho.a, rho.ap, rho.signature, rho.sign);
+	printf("\tregge_fac = %+.0f %+.0fi\n", regge_fac.Re(), regge_fac.Im());
+	printf("\tk_u = %i, k_lnu = %i\n", k_u, k_lnu);
 
 	printf("\n");
 
@@ -94,6 +109,7 @@ void BSWModel::Print() const
 	printf("\n");
 
 	printf("\tintegration parameters:\n");
+	printf("\t\thigh accuracy = %u\n", highAccuracy);
 	printf("\t\tt: upper bound = %.1E, precision = %.1E\n", upper_bound_t, precision_t);
 	printf("\t\tb: upper bound = %.1E, precision = %.1E\n", upper_bound_b, precision_b);
 }
@@ -102,6 +118,7 @@ void BSWModel::Print() const
 
 double BSWModel::Ft(double t) const
 {
+	/// Eq. (4) in [3]
 	double G = 1. / (1. - t/m1sq) / (1. - t/m2sq);
 	return f*G*G*	(asq + t) / (asq - t);
 }
@@ -110,16 +127,24 @@ double BSWModel::Ft(double t) const
 
 TComplex BSWModel::Rt(Trajectory tr, double t) const
 {
-	/// s0 = 1 GeV^2
+	/// Eq. (7) in [3]
+	/// NOTE: the equation is missing signs that make the difference between pp and app, corrected
+	/// version below.
+
+	/// NOTE: as s0 = 1 GeV^2, it is simply left out of the formula below.
 
 	double alpha = tr.a + tr.ap * t;
-	return tr.C * exp(tr.b * t + cnts->ln_s * alpha) * (1. + tr.sig * TComplex::Exp(-i*cnts->pi*alpha));
+	return tr.sign * tr.C * exp(tr.b * t + cnts->ln_s * alpha) *
+		(1. + tr.signature * TComplex::Exp(-i*cnts->pi*alpha));
 }
 
 //----------------------------------------------------------------------------------------------------
 
 TComplex BSWModel::R0t(double t) const
 {
+	/// Sum over all allowed Regge trajectories, as defined in the text below Eq. (7) in [3].
+	/// version below.
+
 	return Rt(A2, t) + Rt(omega, t) + Rt(rho, t);
 }
 
@@ -127,17 +152,25 @@ TComplex BSWModel::R0t(double t) const
 
 TComplex BSWModel::S0(double t) const
 {
+	/// Eq. (3) in [3]
+
 	// the s term
 	TComplex term_s = pow(cnts->s, c) / pow(cnts->ln_s, cp);
 
 	// the u term
 	double u = 4.*cnts->proton_mass*cnts->proton_mass - cnts->s - t;
-	TComplex Lnu = TComplex(log(fabs(u)), -cnts->pi); // ambiguity in the article: which sign in +-pi?
+	
+	// u = -|u| exp( i * (2 k_u pi - pi) ) ==> ln u = ln |u| + i * (2 k_u pi - pi)
+	TComplex Lnu = TComplex(log(fabs(u)), (2.* k_u - 1.) * cnts->pi);
+
 	double Lnu_rho2 = Lnu.Rho2();
 	double Lnu_theta = atan2(Lnu.Im(), Lnu.Re());	 // atan2 results in (-pi, +pi)
-	TComplex LnLnu = TComplex(0.5*log(Lnu_rho2), Lnu_theta);
-	TComplex term_u = TComplex::Exp(c * Lnu) / TComplex::Exp(cp * LnLnu);
 
+	// ln u = sqrt(Lu_rho2) exp(i * (Lnu_theta + 2 k_lnu pi))
+	TComplex LnLnu = TComplex(0.5*log(Lnu_rho2), Lnu_theta + 2. * k_lnu * cnts->pi);
+
+	TComplex term_u = TComplex::Exp(c * Lnu) / TComplex::Exp(cp * LnLnu);
+	
 #ifdef DEBUG
 	printf(">> BSWModel::S0\n");
 	printf("\ts=%E, u=%E\n", cnts->s, u);
@@ -154,9 +187,11 @@ TComplex BSWModel::S0(double t) const
 
 TComplex BSWModel::Omega0t(double t) const
 {
-	// S00 = S0(0) instead of S0(t) is used here, valid for high s only !!
+	/// Eq. (2) in [3] written in t-space (cf. Eq. (7) in [1])
+	/// S00 = S0(0) instead of S0(t) is used here, valid for high s only !!
 
-	switch (mode) {
+	switch (mode)
+	{
 		case mPomReg:
 			return S00*Ft(t) + R0t(t) / cnts->s / regge_fac;
 		case mPom:
